no more messages at startup when using run.sh